# Neo4J-RAG-API

./: .env.dist  .gitignore  README.md  app.py  main.py  pyproject.toml
infra/docker/: docker-compose.yml
neo4jrag/: __init__.py  config.py
neo4jrag/api/: deps.py
neo4jrag/api/v1/: router.py
neo4jrag/api/v1/endpoints/: __init__.py  cache.py  documents.py  health.py  knowledges_graph.py  query.py  stats.py
neo4jrag/api/v1/middleware/: setup_middleware.py
neo4jrag/core/: events.py  exceptions.py  manager.py
neo4jrag/domain/schemas/: common.py  request.py  response.py
neo4jrag/services/cache/: __init__.py  semantic_cache.py
neo4jrag/services/entity_extractor/: fast_entity_extractor.py  hybrid_entity_extractor.py  llm_entity_extractor.py  tiny_llm_extractor.py
neo4jrag/services/neo4j/: graph_builder.py  neo4j_connector.py  vector_store.py
neo4jrag/services/ollama/: ollama_loader.py  rag_pipeline.py
neo4jrag/utils/: logger.py
tests/test_api/: test_api.py
